[robolectric] added backward compatibility support and basic structure for testing