@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'robolectric'
 apply plugin: 'hugo'
 
 buildscript {
@@ -7,6 +8,7 @@ buildscript {
     }
 
     dependencies {
+        classpath 'org.robolectric:robolectric-gradle-plugin:0.14.1'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.1.0'
     }
 }
@@ -17,7 +19,7 @@ android {
 
     defaultConfig {
         applicationId "com.romainpiel.darktown"
-        minSdkVersion 21
+        minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -28,10 +30,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        androidTest.setRoot('src/test')
+    }
+}
+
+robolectric {
+    maxHeapSize = '1024m'
+    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'com.jakewharton:butterknife:6.0.0'
-    compile 'com.jakewharton.timber:timber:2.5.0'
+
+    androidTestCompile 'junit:junit:4.11'
+    androidTestCompile 'org.robolectric:robolectric:2.4'
+    androidTestCompile 'com.squareup:fest-android:1.0.8'
+    androidTestCompile 'org.mockito:mockito-all:1.9.5'
 }
